add tests, small fixes

--- a/assets/css/base/_fonts.scss
+++ b/assets/css/base/_fonts.scss
@@ -25,6 +25,6 @@ h2 {
 	font-weight: bold;
 }
 
-body, html, p, h1, h2, h3, h4, h5, h6, h7, h8, input[type="text"], a {
+body, html, p, h1, h2, h3, h4, h5, h6, h7, h8, input, button, div, a {
   font-family: 'Sorts Mill Goudy', serif;
 }
