--- a/views/login.html
+++ b/views/login.html
@@ -17,7 +17,7 @@
 				type="text" 
 				name="email" 
 				tabindex=1 
-				placeholder="Email adress"
+				placeholder="Email address"
 			>
 			<div class="inner-section-divider-small"></div>
 			<input style="margin-bottom: 10px;"
