--- a/views/maintenance.html
+++ b/views/maintenance.html
@@ -9,9 +9,7 @@
 
     <div class="inner-section-divider-medium"></div>
 
-    <div class="container-small">
+    <div>
         <div class="upload-container"></div>
-        <!-- This id has style applied to it -->
-        <div id="search-result"></div>
     </div>
 </div>
