--- a/views/new-member.html
+++ b/views/new-member.html
@@ -9,10 +9,19 @@
         <div class="innerSectionContainer">
             <div class="inner-section-divider-medium">
                 <h3>Member id</h3>
-                <input id="add-member-id" class="short" name="id">
+                <input id="add-member-id" class="short" name="id" placeholder="Membership number">
             </div>
         </div>
 
+        <div class="innerSectionContainer">
+            <div class="inner-section-divider-medium">
+                <div class="couterContainer">
+                    <h3>Title</h3>
+                </div>
+                <input id="add-member-title" class="short" name="title" placeholder="Title">
+            </div>
+        </div>
+        
         <div class="innerSectionContainer">
             <div class="inner-section-divider-medium">
                 <h3>Full name*</h3>
@@ -32,14 +41,6 @@
             </div>
         </div>
 
-        <div class="innerSectionContainer">
-            <div class="inner-section-divider-medium">
-                <div class="couterContainer">
-                    <h3>Title</h3>
-                </div>
-                <input id="add-member-title" class="short" name="title">
-            </div>
-        </div>
 
         <div class="topSectionDividor">
             <h2>2. Address</h2>
@@ -148,7 +149,7 @@
                 <div class="couterContainer">
                     <h3>Membership type</h3>
                 </div>
-                <select name="membershipType" id="add-member-membership-type" class="short" style="color:#ccc;">
+                <select name="membershipType" id="add-member-membership-type" class="short" style="color:#ccc;width:320px;">
                     <option class="meta" value="" disabled="" selected="">Click to select one</option>
                     <option value="Annual Single">Annual Single</option>
                     <option value="Annual Double">Annual Double</option>
@@ -238,7 +239,7 @@
                 <div class="couterContainer">
                     <h3>News type</h3>
                 </div>
-                <select name="newsType" class="short" style="color:#ccc;">
+                <select name="newsType" class="short" style="color:#ccc;width:320px;">
                     <option class="meta" value="" disabled="" selected="">Click to select one</option>
                     <option value="post">Post</option>
                     <option value="online">Online</option>
