--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -6,11 +6,13 @@
 @import "pages/create-member";
 @import "pages/index";
 @import "pages/search-member";
+@import "pages/upload";
 
 * {
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
+  font-family: 'Sorts Mill Goudy', serif
 }
 
 body{
@@ -28,4 +30,20 @@ h1{
 
 h3{
   font-weight: 300;
+}
+
+input::-webkit-input-placeholder {
+    font-family: 'Sorts Mill Goudy', serif;
+}
+
+input:-ms-input-placeholder {
+    font-family: 'Sorts Mill Goudy', serif;
+}
+
+input:-moz-placeholder {
+    font-family: 'Sorts Mill Goudy', serif;
+}
+
+input::-moz-placeholder {
+    font-family: 'Sorts Mill Goudy', serif;
 }
