--- a/assets/css/pages/_create-member.scss
+++ b/assets/css/pages/_create-member.scss
@@ -1,4 +1,6 @@
 .new-member-container {
+	border-bottom: 1px solid #dbdbdb;
+	box-shadow: 0 1px 10px rgba(0, 0, 0, 0.1);
 	background-color: #fff;
 	width: 70%;
 	margin: auto;
@@ -7,6 +9,7 @@
 	padding-bottom: 50px;
 	overflow: hidden;
 	margin-bottom: 50px;
+	margin-top: 1%;
 	h2 {
 		margin-top: 40px;
 	}
